Use Paths.get() instead of Path.of() to prevent CI to fail on Ubuntu 18.04.