@@ -7,7 +7,10 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Iterator;
+import java.util.List;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -104,7 +107,7 @@ public class ArgParser {
         break;
       }
     } else {
-      setBytecodesPaths(Path.of(bytecodePath));
+      setBytecodesPaths(Paths.get(bytecodePath));
     }
   }
 
